<resources>
    <string name="app_name">NenBeg Smart Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="firebase_web_host" translatable="false">nenbeg-smart.firebaseapp.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_add_title">Add</string>
    <string name="navigation_list_title">List</string>
    <string name="title_activity_settings">Settings</string>

    <string name="deviceIDtest" translatable="false">AZl0feOBbofkPl</string>
    <string name="default_notification_channel_id">NENB</string>

    <string name="deviceHisto">%1$s Historic</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="op_completed">Operation completed.</string>
    <string name="op_failed">Operation failed !</string>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="app_name_short">NS</string>
    <string name="title_activity_device_historic">Device Historic</string>
    <string name="last_alarm">Last Alarm Off</string>
    <string name="histo_event">Device Historic</string>
    <string name="nbre_year">Total this year</string>
    <string name="nbre_month">Total this Month</string>
    <string name="snack_notif_title">NOTIFICATIONS</string>
    <string name="swc_detect">Notify on leack detected</string>
    <string name="battery_level">Notifify on Battery low</string>
    <string name="critical_alarm">Is a critical alarm</string>
    <string name="done">DONE</string>
    <string name="incomingcall">Incoming call</string>
    <string name="fakecallname">Water Leak Detector</string>
    <string name="fakecallnumber">0000852951753</string>
    <string name="my_notif_listner">My Notif Listner</string>
    <string name="notification_listener_service">My Notif Listner</string>
    <string name="notification_listener_service_explanation">My Notif Listner Serv</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deviceName">Name</string>
    <string name="basicInofs">Basic Infos</string>
    <string name="OtherInofs">Other Infos</string>
    <string name="deviceNetworkInfos">Device network Infos</string>
    <string name="deviceSharing">Device Sharing</string>
    <string name="deviceRemove">Remove Device</string>
    <string name="deviceReset">Reset Device</string>


</resources>
