<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />


    <item
        android:id="@+id/nav_add_device"
        android:icon="@drawable/baseline_add_black_18dp"
        android:title="@string/navigation_add_title" />

    <item
        android:id="@+id/nav_device_detail"
        android:icon="@drawable/baseline_list_black_18dp"
        android:title="@string/navigation_list_title" />

</menu>
