<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtBasicInfos"
            android:layout_width="345dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/basicInofs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/lytName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtBasicInfos">

            <TextView
                android:id="@+id/txtDevNameLbl"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.3"
                android:text="@string/deviceName"
                android:gravity="center_vertical|left"/>

            <TextView
                android:id="@+id/txtDevName"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.65"
                android:gravity="center_vertical|right"
                android:text="TextView >" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lblPosition"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytName">

            <TextView
                android:id="@+id/txtDevLocationLbl"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.3"
                android:gravity="center_vertical|left"
                android:text="@string/deviceName" />

            <TextView
                android:id="@+id/txtDevLocation"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.65"
                android:gravity="center_vertical|right"
                android:text="TextView >" />

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPosition" />

        <TextView
            android:id="@+id/txtOtherInfos"
            android:layout_width="345dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/OtherInofs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />


        <LinearLayout
            android:id="@+id/lytInfo"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtOtherInfos">

            <TextView
                android:id="@+id/txtDevInfosLbl"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.8"
                android:gravity="center_vertical|left"
                android:text="@string/deviceNetworkInfos" />

            <TextView
                android:id="@+id/txtDevInfos"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.2"
                android:gravity="center_vertical|right"
                android:text=" >" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lytShare"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytInfo">

            <TextView
                android:id="@+id/txtDevShareLbl"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.8"
                android:gravity="center_vertical|left"
                android:text="@string/deviceSharing" />

            <TextView
                android:id="@+id/txtDevShare"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.2"
                android:gravity="center_vertical|right"
                android:text=" >" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lytGroup"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytShare">

            <TextView
                android:id="@+id/txtDevGroupLbl"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.8"
                android:gravity="center_vertical|left"
                android:text="@string/deviceSharing" />

            <TextView
                android:id="@+id/txtDevGroup"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.2"
                android:gravity="center_vertical|right"
                android:text=" >" />

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytGroup" />


        <LinearLayout
            android:id="@+id/lytReset"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3">

            <TextView
                android:id="@+id/txtDevRemove"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_weight="0.5"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/deviceRemove" />

            <TextView
                android:id="@+id/txtDevReset"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.5"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/deviceReset" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>