<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceFragment">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/lytLastAlarm"
            android:layout_width="123dp"
            android:layout_height="59dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txtHistoryEvent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtLastAlarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/last_alarm"
                android:text="Jun. 21, 2018" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lytNbreMonth"
            android:layout_width="102dp"
            android:layout_height="59dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txtHistoryEvent"
            app:layout_constraintStart_toEndOf="@+id/lytLastAlarm"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtNbreMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/nbre_month"
                android:text="05" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lytNbreAn"
            android:layout_width="83dp"
            android:layout_height="59dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/lytNbreMonth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lytNbreMonth"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtNbreAn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/nbre_year"
                android:text="25" />
        </android.support.design.widget.TextInputLayout>




        <TextView
            android:id="@+id/txtHistoryEvent"
            android:layout_width="322dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="bottom|center_horizontal"
            android:text="@string/histo_event"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="417dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        >


    <ScrollView


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:paddingBottom="20dp">



            <android.support.v7.widget.RecyclerView
                android:id="@+id/list"
                android:name="com.nenbeg.smart.DeviceEventFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                tools:context=".DeviceEventFragment"
                tools:listitem="@layout/fragment_deviceevent" />






    </ScrollView>


        <ImageView
            android:id="@+id/imgNotif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"

            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/baseline_notification_important_black_18dp" />


        <com.nenbeg.smart.tools.customviews.MyBatteryLevel
            android:layout_width="59dp"
            android:layout_height="39dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="2dp"
            android:layout_gravity="bottom|right"

            android:id="@+id/myBatLevel"
            app:battLvlColor="@color/colorPrimary"
            app:battLvlLevel="60"
            app:battLvlTextShown=" "
            app:battLvlShowText="true">

        </com.nenbeg.smart.tools.customviews.MyBatteryLevel>

    </FrameLayout>



</android.support.constraint.ConstraintLayout>
